--- a/docs/ERA5_Example.ipynb
+++ b/docs/ERA5_Example.ipynb
@@ -4,13 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ERA5 Data Assimilation Example\n",
-    "\n",
-    "该 Notebook 用于：\n",
-    "1. 调用 `src/assimilation/era5_full_observation.py` 的统一接口，对所有 baseline 执行 DA；\n",
-    "2. 参考 `src/plot/era5_DA.py` 绘制按 channel 分组的指标曲线图；\n",
-    "3. 参考 `src/plot/era5_gif_separate_background.py` 绘制指定 channel 的 GIF 并在 notebook 内展示；\n",
-    "4. 参考 `src/plot/era5_PSD.py` 绘制统一的 power spectrum distribution 大图并展示。\n"
+    "# ERA5 Data Assimilation Example"
    ]
   },
   {
@@ -36,7 +30,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1) 配置实验参数（可自由修改）\n"
+    "## 1) Experiment Configuration\n"
    ]
   },
   {
@@ -46,7 +40,7 @@
    "outputs": [],
    "source": [
     "SAVE_PREFIX = 'fullobs_direct_era5_'\n",
-    "WINDOW_LENGTH = 10\n",
+    "WINDOW_LENGTH = 4\n",
     "OBSERVATION_SCHEDULE = list(range(WINDOW_LENGTH))\n",
     "\n",
     "DA_CONFIG = {\n",
@@ -60,14 +54,14 @@
     "    'save_prefix': SAVE_PREFIX,\n",
     "}\n",
     "\n",
-    "DA_CONFIG\n"
+    "DA_CONFIG"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2) 运行所有 baseline 的全观测 DA\n"
+    "## 2) Unified Data Assimilation for all baselines\n"
    ]
   },
   {
@@ -86,7 +80,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3) 绘制 channel-wise DA 指标曲线（MSE / RRMSE / SSIM）\n"
+    "## 3) channel-wise DA metic（MSE / RRMSE / SSIM）\n"
    ]
   },
   {
@@ -126,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4) 绘制指定 channel 的 GIF（DA / Background / Error）\n"
+    "## 4) Animation Example\n"
    ]
   },
   {
@@ -170,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5) 绘制统一 PSD 大图并展示\n"
+    "## 5) Power Spectrum Distribution\n"
    ]
   },
   {
@@ -207,7 +201,7 @@
     ")\n",
     "\n",
     "display(Image(filename=str(psd_path)))\n",
-    "psd_path\n"
+    "psd_path"
    ]
   }
  ],
