--- a/docs/ERA5_Example.ipynb
+++ b/docs/ERA5_Example.ipynb
@@ -10,15 +10,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "8965618f",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-21T09:43:45.179109Z",
-     "iopub.status.busy": "2026-02-21T09:43:45.179001Z",
-     "iopub.status.idle": "2026-02-21T09:43:45.183670Z",
-     "shell.execute_reply": "2026-02-21T09:43:45.183242Z"
+     "iopub.execute_input": "2026-02-21T12:47:16.155840Z",
+     "iopub.status.busy": "2026-02-21T12:47:16.155732Z",
+     "iopub.status.idle": "2026-02-21T12:47:16.160303Z",
+     "shell.execute_reply": "2026-02-21T12:47:16.159949Z"
     }
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Repo root: /scratch_root/wy524/irp-test-framework\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "import sys\n",
@@ -31,9 +41,7 @@
     "    sys.path.append(str(repo_root))\n",
     "\n",
     "print(f'Repo root: {repo_root}')\n"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -45,15 +53,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
    "id": "4a47f19d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-21T09:43:45.184844Z",
-     "iopub.status.busy": "2026-02-21T09:43:45.184737Z",
-     "iopub.status.idle": "2026-02-21T09:43:45.188807Z",
-     "shell.execute_reply": "2026-02-21T09:43:45.188460Z"
+     "iopub.execute_input": "2026-02-21T12:47:16.161341Z",
+     "iopub.status.busy": "2026-02-21T12:47:16.161238Z",
+     "iopub.status.idle": "2026-02-21T12:47:16.165282Z",
+     "shell.execute_reply": "2026-02-21T12:47:16.164939Z"
     }
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'obs_ratio': 0.15,\n",
+       " 'obs_noise_std': 0.0,\n",
+       " 'observation_schedule': [0, 1, 2, 3],\n",
+       " 'observation_variance': None,\n",
+       " 'window_length': 4,\n",
+       " 'num_runs': 5,\n",
+       " 'start_T': 0,\n",
+       " 'save_prefix': 'fullobs_direct_era5_'}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "SAVE_PREFIX = 'fullobs_direct_era5_'\n",
     "WINDOW_LENGTH = 4\n",
@@ -71,9 +99,7 @@
     "}\n",
     "\n",
     "DA_CONFIG"
-   ],
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
    "cell_type": "markdown",
@@ -85,198 +111,175 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
    "id": "588d1024",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2026-02-21T09:43:45.189784Z",
-     "iopub.status.busy": "2026-02-21T09:43:45.189683Z",
-     "iopub.status.idle": "2026-02-21T09:43:52.879338Z",
-     "shell.execute_reply": "2026-02-21T09:43:52.878773Z"
+     "iopub.execute_input": "2026-02-21T12:47:16.166258Z",
+     "iopub.status.busy": "2026-02-21T12:47:16.166156Z",
+     "iopub.status.idle": "2026-02-21T12:47:24.088348Z",
+     "shell.execute_reply": "2026-02-21T12:47:24.087759Z"
     }
    },
-   "source": [
-    "from src.assimilation.era5_full_observation import run_all_models\n",
-    "\n",
-    "summary = run_all_models(**DA_CONFIG)\n",
-    "summary\n"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "id": "6f05cae4",
-   "metadata": {},
-   "source": [
-    "## 3) channel-wise DA metic（MSE / RRMSE / SSIM）\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "id": "283a7d4d",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2026-02-21T09:43:52.880932Z",
-     "iopub.status.busy": "2026-02-21T09:43:52.880614Z",
-     "iopub.status.idle": "2026-02-21T09:43:56.344197Z",
-     "shell.execute_reply": "2026-02-21T09:43:56.343692Z"
-    }
-   },
-   "source": [
-    "from IPython.display import Image, display\n",
-    "\n",
-    "from src.plot.era5_DA import (\n",
-    "    load_model_metrics,\n",
-    "    print_time_summary,\n",
-    "    build_comparison_figure,\n",
-    ")\n",
-    "\n",
-    "model_data = load_model_metrics(repo_root, prefix=SAVE_PREFIX)\n",
-    "model_names = list(model_data.keys())\n",
-    "print_time_summary(repo_root, model_names, prefix=SAVE_PREFIX)\n",
-    "\n",
-    "obs_schedule_to_draw = OBSERVATION_SCHEDULE if 'interobs' in SAVE_PREFIX.lower() else None\n",
-    "\n",
-    "figures_dir = repo_root / 'results' / 'Comparison' / 'figures'\n",
-    "output_da = figures_dir / f'{SAVE_PREFIX if SAVE_PREFIX else \"default_\"}era5_DA_comparison.png'\n",
-    "\n",
-    "fig = build_comparison_figure(\n",
-    "    model_data=model_data,\n",
-    "    output_path=output_da,\n",
-    "    observation_schedule=obs_schedule_to_draw,\n",
-    ")\n",
-    "\n",
-    "display(Image(filename=str(output_da)))\n"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "id": "d9d5ae3c",
-   "metadata": {},
-   "source": [
-    "## 4) Animation Example\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "id": "8341fbfd",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2026-02-21T09:43:56.346577Z",
-     "iopub.status.busy": "2026-02-21T09:43:56.346454Z",
-     "iopub.status.idle": "2026-02-21T09:53:43.214666Z",
-     "shell.execute_reply": "2026-02-21T09:53:43.214107Z"
-    }
-   },
-   "source": [
-    "from IPython.display import Image, display\n",
-    "\n",
-    "from src.plot.era5_gif_separate_background import make_era5_da_gif_separate\n",
-    "\n",
-    "DATA_PATH = str(repo_root / 'data/ERA5/ERA5_data/test_seq_state.h5')\n",
-    "MIN_PATH = str(repo_root / 'data/ERA5/ERA5_data/min_val.npy')\n",
-    "MAX_PATH = str(repo_root / 'data/ERA5/ERA5_data/max_val.npy')\n",
-    "RESULTS_ROOT = str(repo_root / 'results')\n",
-    "FIGURE_DIR = str(repo_root / 'results/Comparison/figures')\n",
-    "\n",
-    "result_filename = f'{SAVE_PREFIX}multi.npy'\n",
-    "rollout_filename = f'{SAVE_PREFIX}multi_original.npy'\n",
-    "\n",
-    "gif_paths = make_era5_da_gif_separate(\n",
-    "    data_path=DATA_PATH,\n",
-    "    min_path=MIN_PATH,\n",
-    "    max_path=MAX_PATH,\n",
-    "    results_root=RESULTS_ROOT,\n",
-    "    result_filename=result_filename,\n",
-    "    rollout_filename=rollout_filename,\n",
-    "    out_dir=FIGURE_DIR,\n",
-    "    start_t=DA_CONFIG['start_T'],\n",
-    "    start_datetime_str='2018-01-01 06:00',\n",
-    "    hours_per_frame=6,\n",
-    ")\n",
-    "\n",
-    "CHANNEL_TO_SHOW = 0  # 0~4\n",
-    "display(Image(filename=gif_paths[CHANNEL_TO_SHOW]))\n",
-    "gif_paths\n"
-   ],
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ed49e4e9",
-   "metadata": {},
-   "source": [
-    "## 5) Power Spectrum Distribution\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "id": "6df19302",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2026-02-21T09:53:43.220208Z",
-     "iopub.status.busy": "2026-02-21T09:53:43.219791Z",
-     "iopub.status.idle": "2026-02-21T09:53:48.026768Z",
-     "shell.execute_reply": "2026-02-21T09:53:48.026293Z"
-    }
-   },
-   "source": [
-    "from IPython.display import Image, display\n",
-    "\n",
-    "from src.plot.era5_PSD import make_spatial_power_spectrum_grid\n",
-    "\n",
-    "psd_out = repo_root / 'results/Comparison/figures' / f'{SAVE_PREFIX}era5_spectrum_grid.png'\n",
-    "\n",
-    "psd_path = make_spatial_power_spectrum_grid(\n",
-    "    data_path=DATA_PATH,\n",
-    "    min_path=MIN_PATH,\n",
-    "    max_path=MAX_PATH,\n",
-    "    results_root=RESULTS_ROOT,\n",
-    "    da_filename=f'{SAVE_PREFIX}multi.npy',\n",
-    "    noda_filename=f'{SAVE_PREFIX}multi_original.npy',\n",
-    "    da_subdir='DA',\n",
-    "    noda_subdir='DA',\n",
-    "    out_path=str(psd_out),\n",
-    "    start_t=DA_CONFIG['start_T'],\n",
-    "    row_label_fontsize=20,\n",
-    "    col_label_fontsize=20,\n",
-    "    tick_fontsize=9,\n",
-    "    sup_fontsize=13,\n",
-    "    legend_fontsize=14,\n",
-    "    gt_lw=2.6,\n",
-    "    da_lw=2.4,\n",
-    "    noda_lw=2.4,\n",
-    ")\n",
-    "\n",
-    "display(Image(filename=str(psd_path)))\n",
-    "psd_path"
-   ],
-   "outputs": [],
-   "execution_count": null
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.10.19"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 5
-}
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded ERA5 data with shape: (6283, 64, 32, 5)\n",
+      "Dataset total samples: 6271\n",
+      "\n",
+      "===== Running KKR =====\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using device: cpu\n",
+      "Forward model loaded.\n",
+      "Loaded ERA5 data with shape: (6283, 64, 32, 5)\n",
+      "Dataset total samples: 6271\n",
+      "Ground truth slice shape: torch.Size([5, 5, 64, 32])\n",
+      "Model will latent forward 1 step before DA\n",
+      "Fixed observation setup: 1536 observations (15.000% ratio)\n",
+      "Noise level: σ = 0.0000\n",
+      "\n",
+      "Starting assimilation run 1/5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KKR run failed: module 'torchda' has no attribute 'CaseBuilder'\n",
+      "\n",
+      "===== Running KAE =====\n",
+      "Using device: cpu\n",
+      "Forward model loaded.\n",
+      "Loaded ERA5 data with shape: (6283, 64, 32, 5)\n",
+      "Dataset total samples: 6271\n",
+      "Ground truth slice shape: torch.Size([6, 5, 64, 32])\n",
+      "Model will latent forward 1 step before DA\n",
+      "Fixed observation setup: 1536 observations (15.000% ratio)\n",
+      "Noise level: σ = 0.0000\n",
+      "\n",
+      "Starting assimilation run 1/5\n",
+      "KAE run failed: module 'torchda' has no attribute 'CaseBuilder'\n",
+      "\n",
+      "===== Running WAE =====\n",
+      "Using device: cpu\n",
+      "Forward model loaded.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded ERA5 data with shape: (6283, 64, 32, 5)\n",
+      "Dataset total samples: 6271\n",
+      "Ground truth slice shape: torch.Size([6, 5, 64, 32])\n",
+      "Model will latent forward 1 step before DA\n",
+      "Fixed observation setup: 1536 observations (15.000% ratio)\n",
+      "Noise level: σ = 0.0000\n",
+      "\n",
+      "Starting assimilation run 1/5\n",
+      "WAE run failed: module 'torchda' has no attribute 'CaseBuilder'\n",
+      "\n",
+      "===== Running AE =====\n",
+      "Using device: cpu\n",
+      "Forward model loaded.\n",
+      "Loaded ERA5 data with shape: (6283, 64, 32, 5)\n",
+      "Dataset total samples: 6271\n",
+      "Ground truth slice shape: torch.Size([6, 5, 64, 32])\n",
+      "Model will latent forward 1 step before DA\n",
+      "Fixed observation setup: 1536 observations (15.000% ratio)\n",
+      "Noise level: σ = 0.0000\n",
+      "\n",
+      "Starting assimilation run 1/5\n",
+      "AE run failed: module 'torchda' has no attribute 'CaseBuilder'\n",
+      "\n",
+      "===== Running DMD =====\n",
+      "Using device: cpu\n",
+      "DMD model loaded with latent dimension 512\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/scratch_root/wy524/miniconda3/envs/koopmanda/lib/python3.10/site-packages/torch/cuda/__init__.py:182: UserWarning: CUDA initialization: CUDA unknown error - this may be due to an incorrectly set up environment, e.g. changing env variable CUDA_VISIBLE_DEVICES after program start. Setting the available devices to be zero. (Triggered internally at /pytorch/c10/cuda/CUDAFunctions.cpp:119.)\n",
+      "  return torch._C._cuda_getDeviceCount() > 0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded ERA5 data with shape: (6283, 64, 32, 5)\n",
+      "Dataset total samples: 6271\n",
+      "Ground truth slice shape: torch.Size([6, 5, 64, 32])\n",
+      "Model will latent forward 1 step before DA\n",
+      "Fixed observation setup: 1536 observations (15.000% ratio)\n",
+      "Noise level: σ = 0.0000\n",
+      "\n",
+      "Starting assimilation run 1/5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DMD run failed: module 'torchda' has no attribute 'CaseBuilder'\n",
+      "\n",
+      "===== Running CGKN =====\n",
+      "Using device: cpu\n",
+      "Loaded ERA5 data with shape: (6283, 64, 32, 5)\n",
+      "Dataset total samples: 6271\n",
+      "Ground truth slice shape: torch.Size([5, 5, 64, 32])\n",
+      "Loaded probe coordinates from ../../../../results/CGKN/ERA5/probe_coords.npy\n",
+      "[OBS] dim_u1 = 614  (points=307, channels=2)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Starting assimilation run 1/5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Starting assimilation run 2/5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Starting assimilation run 3/5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Starting assimilation run 4/5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Starting assimilation run 5/5\n"
+     ]
+    },
+    {
+     
